src/objects/Intake__c.object
<CustomObject>
    <fields>
        <fullName>CarAccompaniment__c</fullName>
        <label>Car Accompaniment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YesNo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ChildWelfare__c</fullName>
        <label>Child Welfare</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YesNo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ClientIdentifiedNeedsOther__c</fullName>
        <label>Client Identified Needs Other</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClientIdentifiedNeeds__c</fullName>
        <label>Client Identified Needs</label>
        <required>true</required>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Address Confidentiality Program</fullName>
                </value>
                <value>
                    <fullName>Chaplain/Spiritual Support</fullName>
                </value>
                <value>
                    <fullName>Child Welfare Reporting</fullName>
                </value>
                <value>
                    <fullName>Computer Lab</fullName>
                </value>
                <value>
                    <fullName>Cultural Support</fullName>
                </value>
                <value>
                    <fullName>Domestic Violence</fullName>
                </value>
                <value>
                    <fullName>Emotional Support for Self/Children</fullName>
                </value>
                <value>
                    <fullName>Essential Needs</fullName>
                </value>
                <value>
                    <fullName>Forensic Exam (SANE or DV)</fullName>
                </value>
                <value>
                    <fullName>Health/Wellness</fullName>
                </value>
                <value>
                    <fullName>Housing Assistance</fullName>
                </value>
                <value>
                    <fullName>Legal Assistance</fullName>
                </value>
                <value>
                    <fullName>Military Affiliation Services</fullName>
                </value>
                <value>
                    <fullName>Parenting</fullName>
                </value>
                <value>
                    <fullName>Sexual Violence</fullName>
                </value>
                <value>
                    <fullName>Shelter</fullName>
                </value>
                <value>
                    <fullName>Stalking</fullName>
                </value>
                <value>
                    <fullName>Support for a Friend/Loved One</fullName>
                </value>
                <value>
                    <fullName>Transportation Assistance</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Assistance Establishing Child Visitation</fullName>
                    <isActive>false</isActive>
                    <label>Assistance Establishing Child Visitation</label>
                </value>
                <value>
                    <fullName>Child Welfare Report</fullName>
                    <isActive>false</isActive>
                    <label>Child Welfare Report</label>
                </value>
                <value>
                    <fullName>Children&apos;s Basic Needs Assistance</fullName>
                    <isActive>false</isActive>
                    <label>Children&apos;s Basic Needs Assistance</label>
                </value>
                <value>
                    <fullName>Divorce, Custody, and/or U-Visa</fullName>
                    <isActive>false</isActive>
                    <label>Divorce, Custody, and/or U-Visa</label>
                </value>
                <value>
                    <fullName>Dropping Charges</fullName>
                    <isActive>false</isActive>
                    <label>Dropping Charges</label>
                </value>
                <value>
                    <fullName>Dropping a VPO</fullName>
                    <isActive>false</isActive>
                    <label>Dropping a VPO</label>
                </value>
                <value>
                    <fullName>Emergency Shelter</fullName>
                    <isActive>false</isActive>
                    <label>Emergency Shelter</label>
                </value>
                <value>
                    <fullName>Emotional Support - Advocacy</fullName>
                    <isActive>false</isActive>
                    <label>Emotional Support - Advocacy</label>
                </value>
                <value>
                    <fullName>Emotional Support - Support Group</fullName>
                    <isActive>false</isActive>
                    <label>Emotional Support - Support Group</label>
                </value>
                <value>
                    <fullName>Emotional Support - Therapy</fullName>
                    <isActive>false</isActive>
                    <label>Emotional Support - Therapy</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Completed__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Consent_Status__c</fullName>
        <label>Consent Status</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Intake Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HearAboutUs__c</fullName>
        <label>Hear About Us</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Media(Newspaper, Magazine, TV, etc.)</fullName>
                </value>
                <value>
                    <fullName>Online Search</fullName>
                </value>
                <value>
                    <fullName>Police</fullName>
                </value>
                <value>
                    <fullName>Family/Friend</fullName>
                </value>
                <value>
                    <fullName>Social Media</fullName>
                </value>
                <value>
                    <fullName>Outreach Presentation/Event</fullName>
                </value>
                <value>
                    <fullName>Partner Agency</fullName>
                </value>
                <value>
                    <fullName>Faith-Based Organization</fullName>
                </value>
                <value>
                    <fullName>YWCA</fullName>
                </value>
                <value>
                    <fullName>OCPD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IfNotServedReferral__c</fullName>
        <label>Referral If Not Served</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IncidentCityOther__c</fullName>
        <label>Incident City Other</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IncidentCity__c</fullName>
        <label>Incident City</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Oklahoma City</fullName>
                </value>
                <value>
                    <fullName>Norman</fullName>
                </value>
                <value>
                    <fullName>Edmond</fullName>
                </value>
                <value>
                    <fullName>Moore</fullName>
                </value>
                <value>
                    <fullName>Shawnee</fullName>
                </value>
                <value>
                    <fullName>Yukon</fullName>
                </value>
                <value>
                    <fullName>El Reno</fullName>
                </value>
                <value>
                    <fullName>Guthrie</fullName>
                </value>
                <value>
                    <fullName>Bethany</fullName>
                </value>
                <value>
                    <fullName>Midwest City</fullName>
                </value>
                <value>
                    <fullName>Del City</fullName>
                </value>
                <value>
                    <fullName>Noble</fullName>
                </value>
                <value>
                    <fullName>Piedmont</fullName>
                </value>
                <value>
                    <fullName>Little Axe</fullName>
                </value>
                <value>
                    <fullName>Tribal Land</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IncidentCounty__c</fullName>
        <label>Incident County</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Oklahoma</fullName>
                </value>
                <value>
                    <fullName>Adair</fullName>
                </value>
                <value>
                    <fullName>Alfalfa</fullName>
                </value>
                <value>
                    <fullName>Atoka</fullName>
                </value>
                <value>
                    <fullName>Beaver</fullName>
                </value>
                <value>
                    <fullName>Beckham</fullName>
                </value>
                <value>
                    <fullName>Blaine</fullName>
                </value>
                <value>
                    <fullName>Bryan</fullName>
                </value>
                <value>
                    <fullName>Caddo</fullName>
                </value>
                <value>
                    <fullName>Canadian</fullName>
                </value>
                <value>
                    <fullName>Carter</fullName>
                </value>
                <value>
                    <fullName>Cherokee</fullName>
                </value>
                <value>
                    <fullName>Choctaw</fullName>
                </value>
                <value>
                    <fullName>Cimarron</fullName>
                </value>
                <value>
                    <fullName>Cleveland</fullName>
                </value>
                <value>
                    <fullName>Coal</fullName>
                </value>
                <value>
                    <fullName>Comanche</fullName>
                </value>
                <value>
                    <fullName>Cotton</fullName>
                </value>
                <value>
                    <fullName>Craig</fullName>
                </value>
                <value>
                    <fullName>Creek</fullName>
                </value>
                <value>
                    <fullName>Custer</fullName>
                </value>
                <value>
                    <fullName>Delaware</fullName>
                </value>
                <value>
                    <fullName>Dewey</fullName>
                </value>
                <value>
                    <fullName>Ellis</fullName>
                </value>
                <value>
                    <fullName>Garfield</fullName>
                </value>
                <value>
                    <fullName>Garvin</fullName>
                </value>
                <value>
                    <fullName>Grady</fullName>
                </value>
                <value>
                    <fullName>Grant</fullName>
                </value>
                <value>
                    <fullName>Greer</fullName>
                </value>
                <value>
                    <fullName>Harmon</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LinkToCase__c</fullName>
        <label>Case</label>
        <referenceTo>Case__c</referenceTo>
        <relationshipLabel>Intakes</relationshipLabel>
        <relationshipName>Intakes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>NotesExpanded__c</fullName>
        <label>Notes Expanded</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Outcome__c</fullName>
        <label>Outcome</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Served</fullName>
                </value>
                <value>
                    <fullName>Not Served</fullName>
                </value>
                <value>
                    <fullName>Partially Served</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PartialOrNoService__c</fullName>
        <label>Partial or No Service</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Partially Served</fullName>
                </value>
                <value>
                    <fullName>Not Served</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PoliceReportNumber__c</fullName>
        <label>Police Report Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PoliceResponse__c</fullName>
        <label>Police Response</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YesNo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PrimaryVictimizationsOther__c</fullName>
        <label>Primary Victimizations (Other)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrimaryVictimizations__c</fullName>
        <label>Primary Victimizations</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Victimizations</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ReasonsForPartialOrNoServiceOther__c</fullName>
        <label>Reasons For Partial Or No Service Other</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReasonsForPartialOrNoService__c</fullName>
        <label>Reasons For Partial Or No Service</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Program Reached Capacity</fullName>
                </value>
                <value>
                    <fullName>Need Not Documented</fullName>
                </value>
                <value>
                    <fullName>Did Not Meet Eligibility</fullName>
                </value>
                <value>
                    <fullName>Program Rules Unacceptable to Survivor</fullName>
                </value>
                <value>
                    <fullName>Services Not Appropriate for Survivor</fullName>
                </value>
                <value>
                    <fullName>Transportation Problems</fullName>
                </value>
                <value>
                    <fullName>Conflict of Interest</fullName>
                </value>
                <value>
                    <fullName>Services Inappropriate- Substance Abuse</fullName>
                </value>
                <value>
                    <fullName>Services Inappropriate- Mental Health</fullName>
                </value>
                <value>
                    <fullName>Inadequate Language Capacity</fullName>
                </value>
                <value>
                    <fullName>Geographic/Other Isolation of Survivor</fullName>
                </value>
                <value>
                    <fullName>Geographic or other isolation of victim/survivor</fullName>
                    <isActive>false</isActive>
                    <label>Geographic or other isolation of victim/survivor</label>
                </value>
                <value>
                    <fullName>Inadequate language capacity (including sign language)</fullName>
                    <isActive>false</isActive>
                    <label>Inadequate language capacity (including sign language)</label>
                </value>
                <value>
                    <fullName>Program rules not acceptable to victim/survivor</fullName>
                    <isActive>false</isActive>
                    <label>Program rules not acceptable to victim/survivor</label>
                </value>
                <value>
                    <fullName>Services inappropriate or inadequate for victims/survivors with mental health problems</fullName>
                    <isActive>false</isActive>
                    <label>Services inappropriate or inadequate for victims/survivors with mental health problems</label>
                </value>
                <value>
                    <fullName>Services inappropriate or inadequate for victims/survivors with substance abuse problems</fullName>
                    <isActive>false</isActive>
                    <label>Services inappropriate or inadequate for victims/survivors with substance abuse problems</label>
                </value>
                <value>
                    <fullName>Services not appropriate for victim/survivor</fullName>
                    <isActive>false</isActive>
                    <label>Services not appropriate for victim/survivor</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ReferralsUtilizedOther__c</fullName>
        <label>Referrals Utilized Other</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReferralsUtilized__c</fullName>
        <label>Referrals Utilized</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Referral to on-site partner program</fullName>
                </value>
                <value>
                    <fullName>Referral to off-site program</fullName>
                </value>
                <value>
                    <fullName>Relocation assistance</fullName>
                </value>
                <value>
                    <fullName>Emergency financial assistance</fullName>
                </value>
                <value>
                    <fullName>Crisis intervention (safety planning)</fullName>
                </value>
                <value>
                    <fullName>On-scene crisis response</fullName>
                </value>
                <value>
                    <fullName>Child or dependent care assistance</fullName>
                </value>
                <value>
                    <fullName>Transportation assistance</fullName>
                </value>
                <value>
                    <fullName>Interpreter services</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SecondaryVictimizationsOther__c</fullName>
        <label>Secondary Victimizations (Other)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SecondaryVictimizations__c</fullName>
        <label>Secondary Victimizations</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Adult Physical Assault – Non-DV – Without a weapon</fullName>
                </value>
                <value>
                    <fullName>Adult Physical Assault – Non-DV – With a weapon</fullName>
                </value>
                <value>
                    <fullName>Adult Sexual Assault</fullName>
                </value>
                <value>
                    <fullName>Adult Sexually Abused/Assaulted as a Child</fullName>
                </value>
                <value>
                    <fullName>Arson</fullName>
                </value>
                <value>
                    <fullName>Bullying – Non-DV – Verbal</fullName>
                </value>
                <value>
                    <fullName>Bullying – Non DV – Cyber</fullName>
                </value>
                <value>
                    <fullName>Bullying – Non DV – Physical</fullName>
                </value>
                <value>
                    <fullName>Burglary</fullName>
                </value>
                <value>
                    <fullName>Child Physical Abuse</fullName>
                </value>
                <value>
                    <fullName>Child Neglect</fullName>
                </value>
                <value>
                    <fullName>Child Pornography</fullName>
                </value>
                <value>
                    <fullName>Child Sexual Abuse/Assault – Stranger</fullName>
                </value>
                <value>
                    <fullName>Child Sexual Abuse/Assault – Non-Stranger</fullName>
                </value>
                <value>
                    <fullName>Domestic and/or Family Violence – Cultural / Spiritual Abuse</fullName>
                </value>
                <value>
                    <fullName>Domestic and/or Family Violence – Emotional / Psychological / Intellectual Abuse</fullName>
                </value>
                <value>
                    <fullName>Domestic and/or Family Violence – Financial Abuse</fullName>
                </value>
                <value>
                    <fullName>Domestic and/or Family Violence – Pet Abuse</fullName>
                </value>
                <value>
                    <fullName>Domestic and/or Family Violence – Physical Abuse</fullName>
                </value>
                <value>
                    <fullName>Domestic and/or Family Violence – Physical Abuse – Strangulation</fullName>
                </value>
                <value>
                    <fullName>Domestic and/or Family Violence – Physical Abuse – With a weapon</fullName>
                </value>
                <value>
                    <fullName>Domestic and/or Family Violence – Destruction of Property</fullName>
                </value>
                <value>
                    <fullName>Domestic and/or Family Violence – Social Abuse / Isolation</fullName>
                </value>
                <value>
                    <fullName>Domestic and/or Family Violence – Using Children to Abuse</fullName>
                </value>
                <value>
                    <fullName>Domestic and/or Family Violence – Verbal Abuse</fullName>
                </value>
                <value>
                    <fullName>Domestic and/or Family Violence – Verbal Abuse – Death Threats (homicidal/suicidal)</fullName>
                </value>
                <value>
                    <fullName>DUI / DWI</fullName>
                </value>
                <value>
                    <fullName>Elder Abuse</fullName>
                </value>
                <value>
                    <fullName>Elder Neglect</fullName>
                </value>
                <value>
                    <fullName>Hate Crime – Racial</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Victims_Compensation_Eligibility__c</fullName>
        <label>Victims Compensation Eligibility</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Eligible</fullName>
                </value>
                <value>
                    <fullName>Eligible</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Intake</label>
    <nameField>
        <displayFormat>Intake - {0000000}</displayFormat>
        <label>Intake</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Intakes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>